first web pagegit status

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<html>
+<!DOCTYPE html>
+
+<html lang="en">
     <head>
-        <title>
-            Welcome to my world!
-        </title>
+        <meta charset="UTF-8">
+        <tilte>My first Webpage!!!</tilte>
     </head>
     <body>
-        <p> welcome to page1!</p>
+        
     </body>
 </html>
-
