--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <tilte>My first Webpage!!!</tilte>
+        <title>first website</title>
     </head>
     <body>
         <h1>Hello World!</h1>
