changes different text style

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     </head>
     <body>
         <h1>Resume</h1>
-        <p lang="en-US">👋 I am Bikash Kunwar, a Computer Science graduate who is enthusiastic about advancing my career in the realm of cyber security. My strong desire to learn and acquire new skills drives me to contribute effectively to the company's mission. With a solid technological acumen, I possess hands-on experience working with an array of Linux and Windows tools and applications, primarily concentrating on bolstering computer security infrastructure.
+        <p lang="en-US">👋 I am <em>Bikash Kunwar</em>, a Computer Science graduate who is enthusiastic about advancing my career in the realm of <strong>Cyber Security</strong>. My strong desire to learn and acquire new skills drives me to contribute effectively to the company's mission. With a solid technological acumen, I possess hands-on experience working with an array of <em>Linux</em> and <em>Windows</em> tools and applications, primarily concentrating on bolstering computer security infrastructure.
         <p lang="en-US">My upbeat outlook and unwavering motivation fuel my eagerness to develop fresh skills and strategies, enabling me to continually propel my journey in the cyber security domain.</p>
         <h1>🧾Experience</h1>
         
+
     </body>
 
 </html>
