--- a/index.html
+++ b/index.html
@@ -7,10 +7,60 @@
     </head>
     <body>
         <h1>Resume</h1>
-        <p lang="en-US">👋 I am <em>Bikash Kunwar</em>, a Computer Science graduate who is enthusiastic about advancing my career in the realm of <strong>Cyber Security</strong>. My strong desire to learn and acquire new skills drives me to contribute effectively to the company's mission. With a solid technological acumen, I possess hands-on experience working with an array of <em>Linux</em> and <em>Windows</em> tools and applications, primarily concentrating on bolstering computer security infrastructure.
+        <p lang="en-US">👋 I am <em>Bikash Kunwar</em>, a Computer Science graduate who is enthusiastic about advancing my career in the realm of <strong>Cyber Security</strong>. My strong desire to learn and acquire new skills drives me to contribute effectively to the company's mission. With a solid technological acumen, I possess hands-on experience working with an array of <em>Linux</em> and <em>Windows</em> tools and applications, primarily concentrating on bolstering computer security infrastructure.</p>
         <p lang="en-US">My upbeat outlook and unwavering motivation fuel my eagerness to develop fresh skills and strategies, enabling me to continually propel my journey in the cyber security domain.</p>
         <h1>🧾Experience</h1>
-        
+        <h2>Junior Network Associate</h2>
+        <p><em><strong>Max Net Solutions Pvt. Ltd.</em></strong></p>
+        <p><em>Kathmandu, Nepal-(May 2022 - November 2022)</em></p>
+        <ul>
+            <li><p>Engaged in active network monitoring to ensure seamless operations and rapid identification of potential issues, enhancing network reliability.</p></li>
+            <li><p>Spearheaded network troubleshooting efforts, diagnosing and resolving connectivity and performance problems swiftly to minimize downtime.</p></li>
+            <li><p>Assisted in network management tasks, including configuring devices, optimizing performance, and ensuring adherence to security protocols.</p></li>
+            <li><p>Provided essential network support to users, addressing their concerns promptly and optimizing their network experience.</p></li>
+        </ul>
+        <h2>🥷Skills</h2>
+        <ul>
+            <li><em>Cybersecurity Fundamentals</em></li>
+            <li><em>Network Basics</em></li>
+            <li><em>Operating Systems</em></li>
+            <li><em>Security Tools</em></li>
+            <li><em>Python</em></li>
+            <li><em>Bash</em></li>
+            <li><em>SIEM Platforms</em></li>
+            <li><em>Continuous Learning</em></li>
+            <li><em>Analytical Skills</em></li>
+            <li><em>Communication Skills</em></li>
+            <li><em>Problem-Solving</em></li>
+            <li><em>Team Collaboration</em></li>
+
+        </ul>
+        <h2>🎓Education</h2>
+        <h3>Bachelor's Degree in Computer Science Engineering</h3>
+        <p><em>2022 (completed)</em></p>
+        <p><strong>Dr. Ambedkar Institute of Technology - Bangalore, India🇮🇳</strong></p>
+        <h2>🎟️Licenses & certifications</h2>
+        <ul>
+            <li><em><strong>Fortinet Network Security Expert level 1 </strong></em></li>
+            <ul>
+                <li><a href="https://training.fortinet.com/mod/customcert/verify_certificate.php">certificate1</a>
+            </ul>
+            <li><em><strong>Foundations of Cybersecurity</strong></em></li>
+            <ul>
+                <li><a href="https://coursera.org/verify/TYA7YSCUNF7X">certificate2</a></li>
+            </ul>
+            <li><em><strong>CCNA 200-301 completed course</strong></em></li>
+            <ul>
+                <li>Code:<em>B12143</em></li>
+                <li><a href="https://verify.broadwayinfosys.com/certificate-verification">certificate3</a></li>
+            </ul>
+            <li><em><strong>IBM Fundamentals of Red Hat Enterprise Linux</strong></em></li>
+            <ul>
+                <li><a href="IBM Fundamentals of Red Hat Enterprise Linux">certificate4</a></li>
+                
+            </ul>
+        </ul>
+
 
     </body>
 
