--- a/index.html
+++ b/index.html
@@ -57,9 +57,23 @@
             <li><em><strong>IBM Fundamentals of Red Hat Enterprise Linux</strong></em></li>
             <ul>
                 <li><a href="IBM Fundamentals of Red Hat Enterprise Linux">certificate4</a></li>
-                
+
             </ul>
         </ul>
+        <h2>🗣️Languages</h2>
+        <p><strong>Nepali 🇳🇵</strong></p>
+        <ul>
+            <li> <p><em>Native speaker</em></p></li>
+        </ul>
+        <p><strong>English 🇺🇸</strong></p>
+        <ul>
+            <li><p><em>Upper_Intermediate</em></p></li>
+        </ul>
+        <h2>Contact</h2>
+        <h4>📧bkash775@gmail.com</h4>
+        <p><em>Linkedin:</em><a href="https://www.linkedin.com/in/bikash-kunwar-6b8a77133/">Linkedin</a></p>
+        <p><strong>📞Phone no: 9868964853</strong></p>
+
 
 
     </body>
