add target and rel in a tags

--- a/index.html
+++ b/index.html
@@ -43,20 +43,20 @@
         <ul>
             <li><em><strong>Fortinet Network Security Expert level 1 </strong></em></li>
             <ul>
-                <li><a href="https://training.fortinet.com/mod/customcert/verify_certificate.php">certificate1</a>
+                <li><a href="https://training.fortinet.com/mod/customcert/verify_certificate.php" target="_blank" rel="noopener noreferrer">certificate1</a>
             </ul>
             <li><em><strong>Foundations of Cybersecurity</strong></em></li>
             <ul>
-                <li><a href="https://coursera.org/verify/TYA7YSCUNF7X">certificate2</a></li>
+                <li><a href="https://coursera.org/verify/TYA7YSCUNF7X" target="_blank" rel="noopener noreferrer">certificate2</a></li>
             </ul>
             <li><em><strong>CCNA 200-301 completed course</strong></em></li>
             <ul>
                 <li>Code:<em>B12143</em></li>
-                <li><a href="https://verify.broadwayinfosys.com/certificate-verification">certificate3</a></li>
+                <li><a href="https://verify.broadwayinfosys.com/certificate-verification" target="noopener" rel="noopener noreferrer">certificate3</a></li>
             </ul>
             <li><em><strong>IBM Fundamentals of Red Hat Enterprise Linux</strong></em></li>
             <ul>
-                <li><a href="IBM Fundamentals of Red Hat Enterprise Linux">certificate4</a></li>
+                <li><a href="https://coursera.org/verify/QZGLTVGNKVV7" target="_blank" rel="noopener noreferrer">certificate4</a></li>
 
             </ul>
         </ul>
@@ -71,7 +71,7 @@
         </ul>
         <h2>Contact</h2>
         <h4>📧bkash775@gmail.com</h4>
-        <p><em>Linkedin:</em><a href="https://www.linkedin.com/in/bikash-kunwar-6b8a77133/">Linkedin</a></p>
+        <p><em>Linkedin:</em><a href="https://www.linkedin.com/in/bikash-kunwar-6b8a77133/" target="_blank" rel="noopener noreferrer">Linkedin</a></p>
         <p><strong>📞Phone no: 9868964853</strong></p>
 
 
