nothing just testing around contact

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <h2>Contact</h2>
         <h4>📧bkash775@gmail.com</h4>
         <p><em>Linkedin:</em><a href="https://www.linkedin.com/in/bikash-kunwar-6b8a77133/" target="_blank" rel="noopener noreferrer">Linkedin</a></p>
-        <p><strong>📞Phone no: 9868964853</strong></p>
+	<p><em>Phone no: 9868964853</em></p>
 
 
 
