--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-	<link rel="stylesheet" href="./output.css">
+	<link rel="stylesheet" href="./style.css">
         <title>My Resume</title>
     </head>
     <body>
